--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prop-types": "^15.6.2",
     "query": "^0.2.0",
     "query-string": "^6.1.0",
+    "radium": "^0.24.1",
     "react": "^16.5.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
