--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "string": "^3.3.3"
+    "string": "^3.3.3",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
