--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "query": "^0.2.0",
     "query-string": "^6.1.0",
     "radium": "^0.24.1",
+    "radix": "0.0.0",
     "react": "^16.5.0",
     "react-animations": "^1.0.0",
     "react-dom": "^16.5.0",
