--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "rules": {
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ],
+        "react/prefer-stateless-function": ["disabled", { "ignorePureComponents": "ignorePureComponents" }],
+        "react/require-default-props": ["enabled", { "forbidDefaultForRequired": true }],
+        "react/no-multi-comp": ["disabled", { "ignoreStateless": true }],
+        "react/destructuring-assignment": ["disabled", "always", { "ignoreClassFields": true }]
+    }
 }
